--- a/QA.AutomatedMagic/QA.AutomatedMagic.csproj
+++ b/QA.AutomatedMagic/QA.AutomatedMagic.csproj
@@ -47,15 +47,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseCommandManager.cs" />
     <Compile Include="BaseMetaObject.cs" />
     <Compile Include="BaseMetaObjectWpfFiller.cs" />
     <Compile Include="CollectionWrappers\ArrayWrapper.cs" />
     <Compile Include="CollectionWrappers\DictionaryWrapper.cs" />
     <Compile Include="CollectionWrappers\LinkedListWrapper.cs" />
     <Compile Include="CollectionWrappers\ListWrapper.cs" />
-    <Compile Include="CommandMagic\CommandAbortException.cs" />
-    <Compile Include="CommandMagic\CommandAttribute.cs" />
-    <Compile Include="CommandMagic\CommandManagerAttribute.cs" />
+    <Compile Include="CommandsMagic\CommandAbortException.cs" />
+    <Compile Include="CommandsMagic\CommandAttribute.cs" />
+    <Compile Include="CommandsMagic\CommandManagerAttribute.cs" />
     <Compile Include="ICollectionSourceResolver.cs" />
     <Compile Include="ICollectionWrapper.cs" />
     <Compile Include="IContext.cs" />
