--- a/QA.AutomatedMagic.Framework.ConsoleRunner/QA.AutomatedMagic.Framework.ConsoleRunner.csproj
+++ b/QA.AutomatedMagic.Framework.ConsoleRunner/QA.AutomatedMagic.Framework.ConsoleRunner.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AC1040CF-4E54-4EBA-BC66-F61BA193A2F0}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{E22C32F0-701D-4FF5-A6D9-CC446570EFD1}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QA.AutomatedMagic.Framework</RootNamespace>
-    <AssemblyName>QA.AutomatedMagic.Framework</AssemblyName>
+    <RootNamespace>QA.AutomatedMagic.Framework.ConsoleRunner</RootNamespace>
+    <AssemblyName>QA.AutomatedMagic.Framework.ConsoleRunner</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,30 +43,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseTestContextItem.cs" />
-    <Compile Include="CommandManagerItem.cs" />
-    <Compile Include="FrameworkException.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source.cs" />
-    <Compile Include="TestCase.cs" />
-    <Compile Include="TestContext.cs" />
-    <Compile Include="TestContextItems\BuildedContextItem.cs" />
-    <Compile Include="TestContextItems\ObjectContextItem.cs" />
-    <Compile Include="TestItem.cs" />
-    <Compile Include="TestLogger.cs" />
-    <Compile Include="TestProject.cs" />
-    <Compile Include="TestStep.cs" />
-    <Compile Include="TestSuite.cs" />
+    <Compile Include="RunConfig.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\QA.AutomatedMagic.TestLogger\QA.AutomatedMagic.TestLogger.csproj">
-      <Project>{42a8ae56-c858-4eb6-a879-6be1f8df789a}</Project>
-      <Name>QA.AutomatedMagic.TestLogger</Name>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QA.AutomatedMagic.Framework\QA.AutomatedMagic.Framework.csproj">
+      <Project>{ac1040cf-4e54-4eba-bc66-f61ba193a2f0}</Project>
+      <Name>QA.AutomatedMagic.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QA.AutomatedMagic.Reports.HtmlReport\QA.AutomatedMagic.Reports.HtmlReport.csproj">
+      <Project>{77fb2828-8499-4273-86d2-3ea8c66130de}</Project>
+      <Name>QA.AutomatedMagic.Reports.HtmlReport</Name>
     </ProjectReference>
     <ProjectReference Include="..\QA.AutomatedMagic\QA.AutomatedMagic.csproj">
       <Project>{dd5e0bdd-2dba-4aa2-bdd3-9df87487257b}</Project>
       <Name>QA.AutomatedMagic</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="RunConfig.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
