--- a/QA.AutomatedMagic/QA.AutomatedMagic.csproj
+++ b/QA.AutomatedMagic/QA.AutomatedMagic.csproj
@@ -108,8 +108,7 @@
     <Compile Include="ValueParsers\XElementParser.cs" />
     <Compile Include="WpfManagingFillers\BaseEditor.cs" />
     <Compile Include="WpfManagingFillers\BaseWpfValueFiller.cs" />
-    <Compile Include="WpfManagingFillers\Creators\CollectionCreator.cs" />
-    <Compile Include="WpfManagingFillers\Creators\ObjectCreator.cs" />
+    <Compile Include="WpfManagingFillers\Creator.cs" />
     <Compile Include="WpfManagingFillers\Editors\CollectionEditor.cs" />
     <Compile Include="WpfManagingFillers\Editors\ObjectEditor.cs" />
     <Compile Include="WpfManagingFillers\Editors\ValueEditor.cs" />
