--- a/QA.AutomatedMagic/QA.AutomatedMagic.csproj
+++ b/QA.AutomatedMagic/QA.AutomatedMagic.csproj
@@ -60,14 +60,13 @@
     <Compile Include="ICollectionWrapper.cs" />
     <Compile Include="IContext.cs" />
     <Compile Include="ILogger.cs" />
-    <Compile Include="IMetaObject.cs" />
+    <Compile Include="MetaMagic\IMetaObject.cs" />
     <Compile Include="IObjectSourceResolver.cs" />
     <Compile Include="IReportGenerator.cs" />
     <Compile Include="ISourceResolver.cs" />
     <Compile Include="IValueParser.cs" />
     <Compile Include="IValueSourceResolver.cs" />
     <Compile Include="LogLevel.cs" />
-    <Compile Include="ManagingFillerException.cs" />
     <Compile Include="MetaMagic\MetaConstraint.cs" />
     <Compile Include="MetaMagic\MetaConstraintAttribute.cs" />
     <Compile Include="MetaMagic\MetaTypeAttribute.cs" />
