--- a/QA.AutomatedMagic/QA.AutomatedMagic.csproj
+++ b/QA.AutomatedMagic/QA.AutomatedMagic.csproj
@@ -43,6 +43,7 @@
     <Compile Include="AutomatedMagicAssemblyAttribute.cs" />
     <Compile Include="AutomatedMagicException.cs" />
     <Compile Include="CommandsMagic\BaseCommandManager.cs" />
+    <Compile Include="CommandsMagic\CommandExecutor.cs" />
     <Compile Include="CommandsMagic\MetaSourceAttribute.cs" />
     <Compile Include="LoggedFileType.cs" />
     <Compile Include="MetaMagic\BaseMetaObject.cs" />
