Added dynamic ContextObejcts

--- a/QA.AutomatedMagic.Framework/QA.AutomatedMagic.Framework.csproj
+++ b/QA.AutomatedMagic.Framework/QA.AutomatedMagic.Framework.csproj
@@ -45,12 +45,20 @@
     <Compile Include="FrameworkContextResolvingException.cs" />
     <Compile Include="FrameworkException.cs" />
     <Compile Include="FrameworkTestExecutionException.cs" />
+    <Compile Include="TestContextItems\Dynamic\ComplexNode.cs" />
+    <Compile Include="TestContextItems\Dynamic\ValueGeneration\StringGenerator.cs" />
+    <Compile Include="TestContextItems\Dynamic\ValueGeneration\BaseValueGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestCase.cs" />
     <Compile Include="TestContext.cs" />
     <Compile Include="TestContextItem.cs" />
     <Compile Include="TestContextItems\DynamicContextObjectItem.cs" />
     <Compile Include="TestContextItems\ContextObjectItem.cs" />
+    <Compile Include="TestContextItems\Dynamic\BaseDynamicNode.cs" />
+    <Compile Include="TestContextItems\Dynamic\ContextValueNode.cs" />
+    <Compile Include="TestContextItems\Dynamic\DynamicNode.cs" />
+    <Compile Include="TestContextItems\Dynamic\GenerationNode.cs" />
+    <Compile Include="TestContextItems\Dynamic\ValueNode.cs" />
     <Compile Include="TestContextManagerItem.cs" />
     <Compile Include="TestContextValueInfo.cs" />
     <Compile Include="TestItem.cs" />
