--- a/QA.AutomatedMagic.Framework/QA.AutomatedMagic.Framework.csproj
+++ b/QA.AutomatedMagic.Framework/QA.AutomatedMagic.Framework.csproj
@@ -46,6 +46,7 @@
     <Compile Include="FrameworkContextResolvingException.cs" />
     <Compile Include="FrameworkException.cs" />
     <Compile Include="FrameworkTestExecutionException.cs" />
+    <Compile Include="Managers\FrameworkManager.cs" />
     <Compile Include="TestContextItems\Dynamic\ComplexNode.cs" />
     <Compile Include="TestContextItems\Dynamic\ContextObjectNode.cs" />
     <Compile Include="TestContextItems\Dynamic\ValueGeneration\StringGenerator.cs" />
