Move all js and css files to resources

--- a/QA.AutomatedMagic.Reports.HtmlReport.Console/QA.AutomatedMagic.Reports.HtmlReport.Console.csproj
+++ b/QA.AutomatedMagic.Reports.HtmlReport.Console/QA.AutomatedMagic.Reports.HtmlReport.Console.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{77FB2828-8499-4273-86D2-3EA8C66130DE}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{609EA011-BB7A-4AC3-93EB-93F140F50B30}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QA.AutomatedMagic.Reports.HtmlReport</RootNamespace>
-    <AssemblyName>QA.AutomatedMagic.Reports.HtmlReport</AssemblyName>
+    <RootNamespace>QA.AutomatedMagic.Reports.HtmlReport.Console</RootNamespace>
+    <AssemblyName>QA.AutomatedMagic.Reports.HtmlReport.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,45 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HtmlReportGenerator.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Content Include="filter js 2.0\filter.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="filter js 2.0\init.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="filter js 2.0\logFilter.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="filter js 2.0\stepFilter.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="filter js 2.0\testFilter.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="css\css.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\QA.AutomatedMagic.Reports.HtmlReport\QA.AutomatedMagic.Reports.HtmlReport.csproj">
+      <Project>{77fb2828-8499-4273-86d2-3ea8c66130de}</Project>
+      <Name>QA.AutomatedMagic.Reports.HtmlReport</Name>
+    </ProjectReference>
     <ProjectReference Include="..\QA.AutomatedMagic\QA.AutomatedMagic.csproj">
       <Project>{dd5e0bdd-2dba-4aa2-bdd3-9df87487257b}</Project>
       <Name>QA.AutomatedMagic</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
